[package]
name = "Tokio"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dashmap = "6.2.1"
flume = "0.12.0"
futures-util = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["bytes", "fs", "full", "macros", "rt", "rt-multi-thread", "tracing"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
